@@ -1370,8 +1370,14 @@ static struct deviceproptableu16 canon_isospeed[] = {
 	{ "1000",		0x0063, 0 },
 	{ "1250",		0x0065, 0 },
 	{ "1600",		0x0068, 0 },
+	{ "2000",		0x006b, 0 },
+	{ "2500",		0x006d, 0 },
 	{ "3200",		0x0070, 0 },
+	{ "4000",		0x0073, 0 },
+	{ "5000",		0x0075, 0 },
 	{ "6400",		0x0078, 0 },
+	{ "12800",		0x0080, 0 },
+	{ "25600",		0x0088, 0 },
 	{ N_("Auto"),		0x0000, 0 },
 };
 GENERIC16TABLE(Canon_ISO,canon_isospeed)
@@ -2207,6 +2213,7 @@ static struct deviceproptableu16 canon_aperture[] = {
       { "5.6 (1/3)",	0x002d, 0 },
       { "5.6",		0x0030, 0 },
       { "6.3",		0x0033, 0 },
+      { "6.7",		0x0034, 0 },
       { "7.1",		0x0035, 0 },
       { "8.0",		0x0038, 0 },
       { "9.0",		0x003b, 0 },
